# agentory

./: README.md  main.py  pyproject.toml
agentory/: __init__.py  agent.py  history.py  views.py
agentory/mcp/: server.py
agentory/skills/: __init__.py  skill.py
agentory/tools/: __init__.py  di.py  inject.py  result.py  schema_builder.py  tools.py  views.py
agentry/: __init__.py  agent.py
agentry/mcp/: schemas.py  server.py
agentry/tools/: tools.py  views.py
examples/: 01_basic_agent.py  02_context_agent.py  03_mcp_agent.py  04_skills_agent.py
tests/: test_agent.py  test_agent_tool_context.py  test_mcp_schemas.py  test_skills.py  test_tool_schema_builder.py  test_tool_views.py  test_tools.py
