[project]
name = "agentory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "py-llmify>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-mock>=3.14.1,<4",
    "pre-commit>=4.3.0",
]
